--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
                     <li><a href="#">Recordar contraseña</a></li>
                 </ul>
             </form>
-
         </div>
     </section>
 
-    <section class="content">
+    <main class="content">
         <h2 class="titulo">Metodología Scrum</h2>
         <div class="caja-flex">
             <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus consectetur beatae,
@@ -77,7 +76,7 @@
                 exercitationem velit laborum excepturi magnam libero sit voluptate! Laudantium tempora architecto ab
                 autem quae expedita dicta quisquam. Quia.</article>
         </div>
-    </section>
+    </main>
 
     <footer class="footer">
         <h3 class="logo">LogoDeWeb</h3>
